--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,12 +1,22 @@
-/* Full-width input fields */
-input[type=text],
-input[type=password] {
-	width: auto;
+/*Input designs*/
+input[type=text] {
+	width: 100%;
+	text-align: center;
 	padding: 12px 20px;
 	margin: 8px 0;
 	display: inline-block;
 	border: 1px solid #ccc;
 	box-sizing: border-box;
+}
+
+.selection {
+	float: right;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+#name {
+	float: center;
 }
 
 /* Set a style for all buttons */
@@ -35,7 +45,7 @@ span.psw {
 
 /* Modal Background */
 .modal {
-	display: none;
+	display: block;
 	position: fixed;
 	z-index: 1;
 	left: 0;
