--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@
 /*Body Style*/
 #bodybg {
 	background-blend-mode: blur(25px);
-	margin-top: 35px;
+	margin-top: 38px;
 }
 
 /*Navigation Pane Style*/
@@ -38,6 +38,50 @@
 
 .nav-page li:hover:not(#active) {
 	background-color: turquoise;
+}
+
+/*Dropdown Menu*/
+.dropbtn {
+	cursor: context-menu;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #6E6666;
+	box-shadow: 0px 8px 16px 0px;
+	border-radius: 15px 15px 15px 15px;
+	margin-top: 1px;
+}
+
+.dropdown-content p {
+	background-color: white;
+	
+	color: black;
+	margin: 0;
+	text-align: center;
+	padding: 8px 14px;
+	font-size: 12px;
+	font-weight: bold;
+	font-family: "times new roman"
+}
+
+.dropdown-content a {
+	color: black;
+	font-size: 15.3px;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	text-align: left;
+}
+
+.dropdown-content a:hover {
+	background-color: red;
+	border-radius: 15px 15px 15px 15px;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
 }
 
 #active {
@@ -109,6 +153,20 @@ td:hover:not(.time) {
 	background-color: #AAA9A9;
 }
 
+/*Body Style*/
+h1 {
+	text-align: center;
+	font-size: 37px;
+	background-color: white;
+	font-family: tahoma;
+	border: 2px solid black;
+	border-radius: 35px 35px 35px 35px;
+	width: 45%;
+	padding: 5px;
+	margin: 0 auto 0 auto;
+}
+
+/*Footer Style*/
 footer {
 	font-weight: bold;
 	margin-top: 10px;
@@ -119,46 +177,74 @@ footer {
 	bottom: 0;
 }
 
-/*Dropdown Menu*/
-.dropbtn {
-	cursor: context-menu;
+/** {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  height: 515px;
+  
+  margin: auto;
 }
 
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #6E6666;
-	box-shadow: 0px 8px 16px 0px;
-	border-radius: 15px 15px 15px 15px;
-	margin-top: 1px;
+/* Hide the images by default */
+.mySlides {
+    display: none;
 }
 
-.dropdown-content p {
-	background-color: white;
-	
-	color: black;
-	margin: 0;
-	text-align: center;
-	padding: 8px 14px;
-	font-size: 12px;
-	font-weight: bold;
-	font-family: "times new roman"
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.dropdown-content a {
-	color: black;
-	font-size: 15.3px;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
-.dropdown-content a:hover {
-	background-color: red;
-	border-radius: 15px 15px 15px 15px;
+/* Caption text */
+.text {
+  color: black;
+  font-size: 18px;
+  padding: 4px 8px;
+  position: absolute;
+  bottom: 70px;
+  text-align: left;
+  background-color: #A8A6A6;
 }
 
-.dropdown:hover .dropdown-content {
-	display: block;
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  position: relative;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
+
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}*/
