--- a/styles/main.css
+++ b/styles/main.css
@@ -96,7 +96,7 @@
 /*Reservation Button*/
 #resbtn {
 	position: absolute;
-	top: 1;
+	top: 2;
 	right: 8;
 	background-color: red;
 	border-radius: 25px 25px 25px 25px;
@@ -110,18 +110,18 @@
 
 #resbtn:hover {
 	transition: transform .3s;
-	transform: scale(1.2);
+	transform: scale(1.1);
 }
 
 /*Schedule Table Style*/
 .sched {
 	background-color: white;
-	margin: 15px;
+	margin-top: 6px;
 }
 
-.sched th {
+#mon, #tue, #wed, #thu, #fri, #sat {
 	background-color: #AAA9A9;
-	width: 10%;
+	width: 1000px;
 	font-weight: bold;
 	font-size: 24px;
 	line-height: 28px;
@@ -161,7 +161,7 @@ h1 {
 	font-family: tahoma;
 	border: 2px solid black;
 	border-radius: 35px 35px 35px 35px;
-	width: 45%;
+	width: 40%;
 	padding: 5px;
 	margin: 0 auto 0 auto;
 }
@@ -169,20 +169,20 @@ h1 {
 /*Footer Style*/
 footer {
 	font-weight: bold;
-	margin-top: 10px;
+	margin-top: 12px;
 	background-color: #69B5EA;
 	text-align: center;
 	border-radius: 15px 15px 15px 15px;
 	padding-bottom: 4px;
-	bottom: 0;
 }
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  height: 515px;
-  
-  margin: auto;
+  max-width: 100%;
+  max-height: 96%;
+  margin: 0;
+  position: fixed;
+  left: 0;
 }
 
 .mySlides {
@@ -195,7 +195,8 @@ footer {
   font-size: 18px;
   padding: 4px 8px;
   position: absolute;
-  bottom: 70px;
+  max-width: 90%;
+  bottom: 10.8%;
   text-align: left;
   background-color: #A8A6A6;
 }
@@ -233,4 +234,15 @@ footer {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
-}*/
+}
+
+/*Scrollbar Style*/
+/* width */
+::-webkit-scrollbar {
+    width: 1px;
+}
+
+/* background */
+::-webkit-scrollbar-track {
+    background: white; 
+}
