--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,9 +1,9 @@
 /*Input designs*/
 input[type=text] {
-	width: 100%;
+	width: 36.7%;
 	text-align: center;
 	padding: 12px 20px;
-	margin: 8px 0;
+	margin: 4px 1.9% 0 0;
 	display: inline-block;
 	border: 1px solid #ccc;
 	box-sizing: border-box;
@@ -16,11 +16,16 @@ input[type=text] {
 	display: inline-block;
 	font-style: italic;
 	font-size: 17px;
-	margin: 0 7px 0 9%;
+	margin: 0 9px 0 7%;
+}
+
+#notes {
+	font-family: "times new roman";
+	font-size: 14px
 }
 
 .resinfo {
-	margin: 0 0 0 1.5%;
+	margin: 4%
 }
 
 .selection {
@@ -55,7 +60,6 @@ input[type=text] {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-	
 }
 
 .modal-content {
