--- a/styles/modal.css
+++ b/styles/modal.css
@@ -63,7 +63,7 @@ input[type=text] {
 }
 
 .modal-content {
-	background-color: #fefefe;
+	background-color: yellow;
 	margin: 4% auto 0 auto;
 	border: 1px solid #888;
 	width: 65%;
